added copycat flaps and wings

--- a/common/src/main/resources/assets/clockworkadditions/lang/en_us.json
+++ b/common/src/main/resources/assets/clockworkadditions/lang/en_us.json
@@ -2,6 +2,8 @@
   "block.clockworkadditions.kinetic_flap_bearing": "Kinetic Flap Bearing",
   "block.clockworkadditions.mechanical_pedals": "Mechanical Pedals",
   "block.clockworkadditions.handlebar": "Handlebar",
+  "block.clockworkadditions.copycat_wing": "Copycat Wing",
+  "block.clockworkadditions.copycat_flap": "Copycat Flap",
   "itemGroup.clockworkadditions" : "Clockwork Additions",
   "create.contraptions.kinetic_flap_bearing.normal": "Redstone Input acts Normally",
   "create.contraptions.kinetic_flap_bearing.inverted": "Redstone Input is Inverted",
