--- a/common/src/main/resources/assets/clockworkadditions/lang/en_us.json
+++ b/common/src/main/resources/assets/clockworkadditions/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.clockworkadditions.handlebar": "Handlebar",
   "block.clockworkadditions.copycat_wing": "Copycat Wing",
   "block.clockworkadditions.copycat_flap": "Copycat Flap",
+  "block.clockworkadditions.cv_joint": "CV Joint",
   "itemGroup.clockworkadditions" : "Clockwork Additions",
   "create.contraptions.kinetic_flap_bearing.normal": "Redstone Input acts Normally",
   "create.contraptions.kinetic_flap_bearing.inverted": "Redstone Input is Inverted",
